# selfquantifier

./: .flake8  .gitignore  .pre-commit-config.yaml  DEV.md  LICENSE  MANIFEST.in  README.md  apply-pyannotations.sh  environment.bare.yml  environment.yml  example-notebook.py  export-conda-environment-yml.sh  lint-fix.sh  mypy.ini  pyproject.toml  pytest.ini  requirements.txt  requirements_dev.txt  requirements_test.txt  setup-python-venv.sh  setup.cfg  setup.py  tox.ini  update-conda-environment-yml.sh
.github/workflows/: test.yaml
clerkai/: nb_helpers.py  utils.py
clerkai/location_history/: defaults.py  flow.py  parse.py  test_flow.py
clerkai/location_history/parsers/: parse_utils.py  test_parse_utils.py
clerkai/location_history/parsers/exiftool/: csv.py  test_csv.py
clerkai/location_history/parsers/exiftool/test_data/: dropbox-camera-uploads.edited.csv  dropbox-camera-uploads.edited.csv.expected.csv
clerkai/location_history/parsers/google/takeout/: json.py  test_json.py
clerkai/location_history/parsers/google/takeout/test_data/: Location History.edited.json.expected.csv
clerkai/location_history/test_data/: possibly_edited_location_history_by_date_df.expected.csv
clerkai/location_history/test_data/Input/Location History/: Location History.edited.json
clerkai/time_tracking/: defaults.py  flow.py  parse.py  test_parse.py
clerkai/time_tracking/parsers/neamtime/: test_tslog.py  tslog.py
clerkai/time_tracking/parsers/neamtime/test_data/: an-hour-of-something.tslog  an-hour-of-something.tslog.expected.csv  example-1-from-neamtime-reporting-2010-docs.with-paus-typo.tslog  example-1-from-neamtime-reporting-2010-docs.with-paus-typo.tslog.expected.csv  multiple-entries-with-the-same-timestamp.tslog  multiple-entries-with-the-same-timestamp.tslog.expected.csv  newly-cycled.tslog.expected.csv  numbers-solo-should-not-be-interpreted-as-timestamps.tslog  numbers-solo-should-not-be-interpreted-as-timestamps.tslog.expected.csv  pause-handling.tslog  pause-handling.tslog.expected.csv
clerkai/time_tracking/parsers/neamtime/test_data/correct/: example-1-from-neamtime-reporting-2010-docs.with-paus-typo.tslog.expected.csv  newly-cycled.tslog.expected.csv  numbers-solo-should-not-be-interpreted-as-timestamps.tslog.expected.csv
clerkai/time_tracking/parsers/neamtime/test_data/incorrect/: correctly-reported-processing-error-sourceline-1.tslog  correctly-reported-processing-error-sourceline-1.tslog.expected.csv  correctly-reported-processing-error-sourceline-1.tslog.parsing_metadata_df.expected.csv  correctly-reported-processing-error-sourceline-1.tslog.processing_errors_df.expected.csv
clerkai/transactions/: defaults.py  flow.py  parse.py  test_parse.py
clerkai/transactions/parsers/: parse_utils.py  test_parse_utils.py
clerkai/transactions/parsers/ee/lhv/: csv.py  test_csv.py
clerkai/transactions/parsers/ee/lhv/test_data/: EE123456789012345678_Account_Statement_2019-08-17.edited.csv  EE123456789012345678_Account_Statement_2019-08-17.edited.csv.expected.csv
clerkai/transactions/parsers/fi/nordea/personal/: test_txt.py  txt.py
clerkai/transactions/parsers/international/n26/: csv.py  test_csv.py
clerkai/transactions/parsers/international/n26/test_data/: n26-csv-transactions.csv.expected.csv
clerkai/transactions/parsers/international/nordea/netbank/: csv.py  test_csv.py
clerkai/transactions/parsers/international/xolo/: csv.py  test_csv.py
clerkai/transactions/parsers/international/xolo/test_data/: Expenses  Xolo.edited.2.csv  Expenses  Xolo.edited.csv.expected.csv
clerkai/transactions/parsers/se/banknorwegian/: test_xlsx.py  xlsx.py
clerkai/transactions/parsers/se/banknorwegian/test_data/: Statement 2020-04-24 banknorwegian.fi.xlsx.expected.csv  Statement aug norwegian.xlsx  Statement aug norwegian.xlsx.expected.csv
clerkai/transactions/parsers/se/danskebank/personal/: csv.py  test_csv.py
clerkai/transactions/parsers/se/nordea/personal/: test_xlsx.py  xlsx.py
pre-poetry-dependency-management/: .gitignore  DEV.md  MANIFEST.in  README.md  apply-pyannotations.sh  environment.yml  environmentdev.yml  requirements.txt  requirements_dev.txt  requirements_test.txt  requirements_upcoming.txt  setup-python-venv.sh  setup.cfg  setup.py
selfquantifier/: nb_helpers.py  utils.py
selfquantifier/location_history/: defaults.py  flow.py  parse.py  test_flow.py
selfquantifier/location_history/parsers/: parse_utils.py  test_parse_utils.py
selfquantifier/location_history/parsers/exiftool/: csv.py  test_csv.py
selfquantifier/location_history/parsers/exiftool/test_data/: dropbox-camera-uploads.edited.csv  dropbox-camera-uploads.edited.csv.expected.csv
selfquantifier/location_history/parsers/google/takeout/: json.py  test_json.py
selfquantifier/location_history/parsers/google/takeout/test_data/: Location History.edited.json.expected.csv
selfquantifier/location_history/test_data/: possibly_edited_location_history_by_date_df.expected.csv
selfquantifier/location_history/test_data/Input/Location History/: location_history_files_editable_data.csv
selfquantifier/time_tracking/: flow.py  parse.py  test_parse.py
selfquantifier/time_tracking/parsers/neamtime/: test_tslog.py  tslog.py
selfquantifier/time_tracking/parsers/neamtime/test_data/correct/: an-hour-of-something.tslog.expected.csv  example-1-from-neamtime-reporting-2010-docs.with-paus-typo.tslog.expected.csv  newly-cycled.tslog  (+3 more)
selfquantifier/transactions/: defaults.py  flow.py  parse.py  test_parse.py
selfquantifier/transactions/parsers/: parse_utils.py  test_parse_utils.py
selfquantifier/transactions/parsers/ee/lhv/: csv.py  test_csv.py
selfquantifier/transactions/parsers/international/n26/: csv.py  test_csv.py
selfquantifier/transactions/parsers/international/revolut/: csv.py  test_csv.py
selfquantifier/transactions/parsers/international/xolo/: csv.py  test_csv.py
selfquantifier/transactions/parsers/se/banknorwegian/: test_xlsx.py  xlsx.py
test-project/: pyproject.toml
test-project/tests/: test_test_project.py
tests/: test_clerkai.py  test_import_lib.py
(+59 files in other folders)
