[tool.poetry]
name = "selfquantifier"
version = "0.2.5"
description = "Tools for extracting, annotating and summarizing transaction, location history and time tracking data from local files."
license = "ISC"
authors = ["Motin <motin@motin.eu>"]
readme = "README.md"
homepage = "https://github.com/clerklabs/selfquantifier"
repository = "https://github.com/clerklabs/selfquantifier"
documentation = "https://github.com/clerklabs/selfquantifier"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: ISC License (ISCL)",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
packages = [{ include = "selfquantifier" }]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"

# general
pandas = "^1.3.4"
jellyfish = "^0.9.0"
imohash = "^1.0.4"

# explicitly require scipy 1.7+ since this works well on M1 macs
scipy = "^1.7.3"

# for location history analysis
reverse_geocoder = "^1.5.1"
geopy = "^2.2.0"
calmap = "^0.0.9"

# for panda's df.to_excel()
openpyxl = "^3.0.9"
XlsxWriter = "^3.0.2"

# for panda's df.read_excel()
xlrd = "^2.0.1"

# for gsheets import/export
gspread = "^5.1.1"
gspread-dataframe = "^3.2.2"
gspread-formatting = "^1.0.5"
pathvalidate = "^2.2.2"

# for git-related util functions
GitPython = "^3.1.26"
PyDriller = "^1.13"

# for caching computational tasks
joblib = "^1.1.0"

# necessary to enable editable installation
setuptools = "*"

# unsorted

[tool.poetry.dev-dependencies]
coverage = "*"
freezegun = "*"
mypy = "*"
poethepoet = "^0.11.0"
pre-commit = "*"
pytest = "*"
pytest-cov = "*"
tox = "*"
tox-poetry = "^0.4.1"
jupyter = "^1.0.0"
ipykernel = "^6.6.0"
jupytext = "^1.13.3"

[build-system]
requires = ["poetry-core>=1.0.0", "setuptools"]
build-backend = "poetry.core.masonry.api"

[tool.poe.tasks]
test = ["pytest", "lint"]
pytest = "pytest --cov=selfquantifier --verbose selfquantifier/"
lint = "pre-commit run --all-files"
install_kernel = "python -m ipykernel install --user --name selfquantifier"
