[tool.poetry]
name = "test-project"
version = "0.1.0"
description = ""
authors = ["Clerk.ai <info@clerk.ai>"]

[tool.poetry.dependencies]
python = "^3.7.1"
selfquantifier = "*"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "test-pypi"
url = "https://test.pypi.org/simple/"
